/**
 */
package no.ntnu.matrixengine;

import org.eclipse.emf.ecore.EObject;

/**
 * <!-- begin-user-doc -->
 * A representation of the model object '<em><b>Get User Input</b></em>'.
 * <!-- end-user-doc -->
 *
 *
 * @see no.ntnu.matrixengine.MatrixenginePackage#getGetUserInput()
 * @model
 * @generated
 */
public interface GetUserInput extends EObject {
} // GetUserInput
